Implemented 1. Implemented the Location enable and Permission

--- a/app/src/main/res/layout/layout_citi_card_items.xml
+++ b/app/src/main/res/layout/layout_citi_card_items.xml
@@ -50,14 +50,13 @@
 
     <TextView
         android:id="@+id/txtCityName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="Mumbai"
         android:textColor="@color/black_and_white"
         android:textSize="@dimen/text_size_20_sp"
         android:textStyle="bold"
@@ -73,7 +72,6 @@
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="Weather"
         android:textColor="@color/light_grey_blue"
         android:textSize="@dimen/text_size_16_sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +88,6 @@
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="Weatherdbsaudbsuabdjsabjdsbajkdlbsajlkbdsjlakdvslabdvhslavdshlakjdbsajdbsja"
         android:textColor="@color/light_grey_blue"
         android:textSize="@dimen/text_size_16_sp"
         app:layout_constraintBottom_toBottomOf="parent"
