--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,6 +47,7 @@
     <dimen name="text_size_25_sp">25sp</dimen>
     <dimen name="text_size_28_sp">28sp</dimen>
     <dimen name="text_size_30_sp">30sp</dimen>
+    <dimen name="text_size_40_sp">40sp</dimen>
     <dimen name="text_size_32_sp">32sp</dimen>
     <dimen name="text_size_34_sp">34sp</dimen>
 
@@ -59,6 +60,7 @@
 
     <dimen name="image_width_40">40dp</dimen>
     <dimen name="image_height_40">40dp</dimen>
+    <dimen name="margin_70">70dp</dimen>
 
     <dimen name="elevation_5">5dp</dimen>
     <dimen name="elevation_10">10dp</dimen>
