--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -5,19 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="weatherViewModel"
             type="com.weatherforecast.viewmodels.WeatherViewModel" />
-
     </data>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="2"
         tools:context=".ui.fragments.WeatherFragment">
 
         <com.weatherforecast.utils.CustomEditText
@@ -43,26 +40,14 @@
             android:textColorHint="@color/light_grey_blue"
             android:visibility="visible" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvPredictions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/white"
-            android:backgroundTint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPlaceSearch" />
-
 
         <LinearLayout
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/etSearchBar"
             android:id="@+id/layMain"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_20"
             android:layout_weight="1"
             android:background="@color/md_orange_600"
             android:orientation="vertical">
@@ -143,12 +128,35 @@
 
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@id/etSearchBar"
+            android:id="@+id/rvPredictions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
+            android:backgroundTint="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <LinearLayout
+            android:layout_margin="@dimen/margin_20"
+            android:layout_height="wrap_content"
             android:id="@+id/layForecast"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_below="@+id/layMain"
             android:orientation="vertical">
+
+            <TextView
+                android:textSize="@dimen/text_size_15_sp"
+                android:text=""
+                android:id="@+id/tvSearchedTextCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvCityList"
@@ -160,5 +168,5 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
