--- a/app/src/main/res/layout/layout_citi_card_items.xml
+++ b/app/src/main/res/layout/layout_citi_card_items.xml
@@ -69,12 +69,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:layout_marginBottom="8dp"
-        android:ellipsize="end"
-        android:singleLine="true"
         android:textColor="@color/light_grey_blue"
         android:textSize="@dimen/text_size_16_sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtCityName" />
 
