--- a/app/src/main/res/layout/layout_wether_forecase_items.xml
+++ b/app/src/main/res/layout/layout_wether_forecase_items.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_marginTop="@dimen/margin_5_dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:layout_marginLeft="@dimen/margin_10_dp"
         android:id="@+id/txtWeather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:text="Places"
         android:textColor="@color/hunter_green"
         android:textSize="@dimen/size_20_dp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardPlaceImage" />
 
     <TextView
+        android:layout_marginLeft="@dimen/margin_10_dp"
         android:id="@+id/txtDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:ellipsize="end"
-        android:singleLine="true"
         android:text="Text"
         android:textColor="@color/light_grey_blue"
         android:textSize="@dimen/text_size_16_sp"
@@ -43,7 +40,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/txtDate"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_10_dp"
         app:layout_constraintTop_toTopOf="@+id/txtWeather"
         android:text="dsadsadsadsa" />
 
