--- a/app/src/main/res/layout/layout_citi_card_items.xml
+++ b/app/src/main/res/layout/layout_citi_card_items.xml
@@ -40,6 +40,7 @@
                 android:layout_marginBottom="@dimen/margin_10_dp"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_16_sp"
+                android:text="@string/locate"
                 android:layout_marginEnd="@dimen/margin_15"
                 app:layout_constraintBottom_toBottomOf="@+id/imgPlaceImage"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +56,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:ellipsize="end"
-        android:singleLine="true"
         android:textColor="@color/black_and_white"
         android:textSize="@dimen/text_size_20_sp"
         android:textStyle="bold"
@@ -85,7 +84,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
-        android:singleLine="true"
         android:textColor="@color/light_grey_blue"
         android:textSize="@dimen/text_size_16_sp"
         app:layout_constraintBottom_toBottomOf="parent"
