--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_45"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="@dimen/margin_70"
+            android:layout_marginTop="@dimen/margin_10_dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/bg_button_stroke_grey"
             android:backgroundTint="@color/white"
