--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,11 @@
 
     <fragment
         android:id="@+id/nav_exit"
-        android:name="com.weatherforecast.ui.fragments.HomeFragment"
+        android:name="com.weatherforecast.ui.fragments.ExitDialog"
         android:label="@string/nav_close_app"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/exit_dialog" >
+        <action
+            android:id="@+id/action_nav_exit_to_nav_top_cities"
+            app:destination="@id/nav_top_cities" />
+    </fragment>
 </navigation>
